--- a/src/SignOut.css
+++ b/src/SignOut.css
@@ -1,19 +1,12 @@
 .SignOut{
-    background-color: #f3f3f3;
-    background-repeat:no-repeat;
-    border: none;
-    cursor:pointer;
-    overflow: hidden;
-    padding: 0.5rem 0; 
-    width: 61px;
-    font-family: "Fauna One";
-
-    color: gray;
-
+    position: absolute;
+    bottom: 1rem;
 }
 
-.SignOut:hover{
-    background-color: lightgray;
+.SignOut button{
+    outline: none;
+}
+.SignOut button:hover{
     color: red;
     transition: 0.3s ease-in-out;
 }
