--- a/src/NoteList.css
+++ b/src/NoteList.css
@@ -47,6 +47,15 @@ ul#notes {
   color: #999;
 }
 
+ul#notes a,
+ul#notes a:link,
+ul#notes a:visited
+ul#notes a:hover
+ul#notes a:active{
+  color: inherit;
+  text-decoration: none;
+}
+
 ul#notes > li {
   height: 100px;
   font-size: 90%;
@@ -54,8 +63,8 @@ ul#notes > li {
   overflow: hidden;
 }
 
-ul#notes > li,
-ul#notes > li * {
+ul#notes > a,
+ul#notes > a * {
   transition: background-color 0.1s ease-in-out, color 0.1s ease-in-out;
 }
 
@@ -64,7 +73,7 @@ ul#notes li .note {
   margin: 0 2rem;
   padding: 1rem 4px; 
 }
-ul#notes li:first-of-type .note {
+ul#notes a:first-of-type li .note {
   border-top: none; 
 }
 ul#notes li:hover {
